feat: add total visits
